--- a/projects/todo-app/src/app/features/tasks/task-page/task-page.component.html
+++ b/projects/todo-app/src/app/features/tasks/task-page/task-page.component.html
@@ -65,6 +65,7 @@
               [label]="'TASK_LIST.EDIT' | translate"
               type="button"
               color="edit"
+               [disabled]="task.completed"
               (click)="openEditModal(task)"
             ></ui-todo-button>
 
