--- a/projects/ui-components/src/lib/todo-button/todo-button.component.html
+++ b/projects/ui-components/src/lib/todo-button/todo-button.component.html
@@ -1,1 +1,9 @@
-<button [type]="type" (click)="click.emit($event)" [ngClass]="color">{{label | translate}}</button>
+<button
+  [type]="type"
+  [disabled]="disabled"
+  [class.disabled]="disabled"
+  [ngClass]="color"
+  (click)="!disabled && click.emit($event)"
+>
+  {{ label | translate }}
+</button>
